crates/oxidizer/tests/ui/non_ident_pattern_param.rs
use oxidizer::ffi_function;

#[ffi_function]
fn foo((a, b): (u32, u32)) -> u32 {
    a + b
}

fn main() {}
